--- a/specs/groups.yaml
+++ b/specs/groups.yaml
@@ -300,11 +300,12 @@ paths:
                   - $ref: './core/common/schemas.yaml#/components/schemas/SuccessResponse'
                   - type: object
                     properties:
-                      data:
-                        type: object
-                        properties:
-                          group_id:
-                            type: integer
+                          data:
+                            type: object
+                            properties:
+                              group_id:
+                                type: integer
+                                example: 25
               examples:
                 created:
                   summary: Создана подгруппа
@@ -388,6 +389,7 @@ paths:
                         properties:
                           group_id:
                             type: integer
+                            example: 10
               examples:
                 updated:
                   summary: Переименование и перенос
@@ -1000,16 +1002,17 @@ components:
         - type: object
           properties:
             parent:
-              type: object
-              description: Информация о родительской группе
-              properties:
-                id:
-                  type: integer
-                  example: 1
-                name:
-                  type: string
-                  example: "IT Department"
-              nullable: true
+              oneOf:
+                - type: object
+                  description: Информация о родительской группе
+                  properties:
+                    id:
+                      type: integer
+                      example: 1
+                    name:
+                      type: string
+                      example: "IT Department"
+                - type: 'null'
     GroupDetail:
       allOf:
         - $ref: '#/components/schemas/Group'
@@ -1045,10 +1048,13 @@ components:
                 properties:
                   type:
                     type: integer
+                    example: 1
                   objectId:
                     type: integer
+                    example: 42
                   objectType:
                     type: string
+                    example: "course"
 
     GroupHierarchyItem:
       type: object
@@ -1056,6 +1062,7 @@ components:
         id:
           type: integer
           description: ID группы
+          example: 1
         name:
           type: string
           description: Название группы
@@ -1123,9 +1130,11 @@ components:
             name:
               type: string
               description: Название группы
+              example: "Support"
             comment:
               type: string
               description: Описание группы
+              example: "Группа поддержки"
             parent_id:
               oneOf:
                 - type: integer
@@ -1202,6 +1211,7 @@ components:
               type: integer
               minimum: 1
               description: ID группы
+              example: 10
             userIds:
               type: array
               items:
@@ -1209,6 +1219,7 @@ components:
                 minimum: 1
               maxItems: 100
               description: Массив ID пользователей (максимум 100)
+              example: [501, 502]
         - type: object
           description: Операция с несколькими группами
           required: [userIds, groupIds]
@@ -1220,6 +1231,7 @@ components:
                 minimum: 1
               maxItems: 100
               description: Массив ID пользователей (максимум 100)
+              example: [501, 502]
             groupIds:
               type: array
               items:
@@ -1227,6 +1239,7 @@ components:
                 minimum: 1
               maxItems: 10
               description: Массив ID групп (максимум 10)
+              example: [12, 15]
 
     GroupMemberStats:
       type: object
