DEV-0000 - fix(docs): remove duplicate tag headers and rebuild

--- a/space-platform-api.yaml
+++ b/space-platform-api.yaml
@@ -89,19 +89,13 @@ tags:
       **Пример Use case:** HR переносит 50 сотрудников между группами, одновременно обновляя назначенные курсы через `POST /group/group/assign-courses`, а затем скачивает экспорт структуры (`/group/group/export`).
   - name: Certificates.Templates
     description: |
-      ## Шаблоны сертификатов (read-only)
-
-      Управление шаблонами для генерации PDF сертификатов. Шаблоны определяют внешний вид сертификата, расположение элементов и переменные для подстановки данных.
+      Управление шаблонами для генерации PDF сертификатов: внешний вид, расположение элементов и переменные для подстановки данных (read-only).
   - name: Certificates.Issued
     description: |
-      ## Выданные сертификаты
-
       Управление выданными сертификатами, их статусами и верификацией.
   - name: Certificates.Lookups
     description: |
-      ## Справочники для сертификатов
-
-      Системные справочники и настройки, связанные с сертификатами.
+      Справочники и системные настройки, связанные с сертификатами.
   - name: Courses
     description: |
       ## Курсы и обучающие продукты (только чтение)
