--- a/specs/certificates.yaml
+++ b/specs/certificates.yaml
@@ -15,19 +15,13 @@ info:
 tags:
   - name: Certificates.Templates
     description: |
-      ## Шаблоны сертификатов (read-only)
-
-      Управление шаблонами для генерации PDF сертификатов. Шаблоны определяют внешний вид сертификата, расположение элементов и переменные для подстановки данных.
+      Управление шаблонами для генерации PDF сертификатов: внешний вид, расположение элементов и переменные для подстановки данных (read-only).
   - name: Certificates.Issued
     description: |
-      ## Выданные сертификаты
-
       Управление выданными сертификатами, их статусами и верификацией.
   - name: Certificates.Lookups
     description: |
-      ## Справочники для сертификатов
-
-      Системные справочники и настройки, связанные с сертификатами.
+      Справочники и системные настройки, связанные с сертификатами.
 
 paths:
   # === Certificates.Templates ===
