DEV-0000 - fix(docs): remove markdown headers from learning tags

--- a/specs/learning.yaml
+++ b/specs/learning.yaml
@@ -15,19 +15,11 @@ info:
 tags:
   - name: Courses
     description: |
-      ## Курсы и обучающие продукты (только чтение)
-
-      **Назначение:** предоставить актуальные метаданные курсов и продуктов для внешних витрин, маркетинговых страниц и CRM.
-      **Ключевые особенности:** постраничная выдача (`/course/course/index`), подробные описания структуры и уроков, атрибуты активности (`students_count`, `enabled`, `status`, `picture`, `lms_id`).
-      **Пример Use case:** маркетинговая команда из внешнего CMS подгружает `/course/course/index`, показывает список продуктов с картинками и вызывает `/course/course/view` для раскрытия программы и уроков.
+      Курсы и обучающие продукты (read-only). Назначение: отдать актуальные метаданные курсов и продуктов для витрин/CRM/маркетинга. Ключевые особенности: постраничная выдача (`/course/course/index`), структура и уроки, атрибуты активности (`students_count`, `enabled`, `status`, `picture`, `lms_id`). Пример: внешняя CMS запрашивает `/course/course/index`, показывает карточки, затем `/course/course/view` для программы и уроков.
 
   - name: Pages
     description: |
-      ## Страницы и контент сайта (только чтение)
-
-      **Назначение:** раскрыть структуру публичных и закрытых страниц сайта, чтобы сторонние CMS могли отображать лендинги и меню.
-      **Ключевые особенности:** подробный список типов страниц (`/dictionary/dictionary/page-types`), фильтруемая выдача `pages`, статус `enabled`, SEO-метаданные, `alias` и `category`.
-      **Пример Use case:** внешняя система заимствует SPA-меню, вызывает `/dictionary/dictionary/pages`, сортирует по типу и обновляет ссылки на новом сайте без доступа к внутреннему CMS.
+      Страницы и контент сайта (read-only). Назначение: раскрыть структуру публичных/закрытых страниц для внешних CMS. Ключевые особенности: список типов (`/dictionary/dictionary/page-types`), выдача `pages`, поля `enabled`, SEO-метаданные, `alias`, `category`. Пример: внешняя система берёт меню, вызывает `/dictionary/dictionary/pages`, сортирует по типу, обновляет ссылки без доступа к внутренней CMS.
 
 paths:
   # === Courses ===
