--- a/redocly.yaml
+++ b/redocly.yaml
@@ -7,6 +7,7 @@ extends:
 
 theme:
   openapi:
+    favicon: https://lms.reezonly.ru/favicon/favicon-32x32.png
     logo:
       src: https://lms.reezonly.ru/img/logo/logo-lms.svg
       altText: Reezonly LMS
@@ -19,14 +20,14 @@ theme:
         primary: '#1f2430'
         secondary: '#4b5565'
       sidebar:
-        backgroundColor: '#f5f7fb'
+        backgroundColor: '#eff1f8'
       rightPanel:
         backgroundColor: '#0f172a'
         textColor: '#e2e8f0'
     typography:
-      fontFamily: '"Inter", "Helvetica Neue", Arial, sans-serif'
+      fontFamily: 'StyreneALC, "Inter", "Helvetica Neue", Arial, sans-serif'
       headings:
-        fontFamily: '"Inter", "Helvetica Neue", Arial, sans-serif'
+        fontFamily: 'StyreneALC, "Inter", "Helvetica Neue", Arial, sans-serif'
         fontWeight: 700
       code:
         fontFamily: '"SFMono-Regular", "Menlo", "Monaco", "Consolas", "Liberation Mono", "Courier New", monospace'
