--- a/redocly.yaml
+++ b/redocly.yaml
@@ -8,7 +8,7 @@ extends:
 theme:
   openapi:
     logo:
-      src: docs/img/logo.svg
+      src: img/logo.svg
       altText: Reezonly LMS
       gutter: 16px
       maxHeight: 40px
